// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Organizer allIDs reducer Should add organizer block 1`] = `
[
  1,
]
`;

exports[`[STORE] - Organizer allIDs reducer Should add organizer block 2`] = `
[
  1,
  2,
]
`;

exports[`[STORE] - Organizer allIDs reducer Should remove organizer block 1`] = `[]`;

exports[`[STORE] - Organizer allIDs reducer Should remove organizer block 2`] = `
[
  1,
]
`;

exports[`[STORE] - Organizer allIDs reducer Should remove organizer block 3`] = `[]`;

exports[`[STORE] - Organizer allIDs reducer Should return the default state 1`] = `[]`;

exports[`[STORE] - Organizer blocks reducer Should return the default state 1`] = `
{
  "allIds": [],
  "byId": {},
}
`;

exports[`[STORE] - Organizer byId reducer Should add organizer block 1`] = `
{
  "99": 1,
}
`;

exports[`[STORE] - Organizer byId reducer Should add organizer block 2`] = `
{
  "100": 2,
  "99": 1,
}
`;

exports[`[STORE] - Organizer byId reducer Should remove organizer block 1`] = `{}`;

exports[`[STORE] - Organizer byId reducer Should remove organizer block 2`] = `
{
  "100": 2,
  "99": 1,
}
`;

exports[`[STORE] - Organizer byId reducer Should remove organizer block 3`] = `
{
  "99": 1,
}
`;
